# php-fpm

./: .gitignore  Makefile.am  Makefile.frag  Makefile.in  ac_cr.patch  acinclude.m4  aclocal.m4  autoconf.markdown  buildconf  config.guess  config.m4  configure  configure.ac  fpm_autoconfig.h.in  generate-autotools  generate-fpm-patch  readme-ru.markdown  readme.markdown
ac/: Makefile.frag  fpm_build.m4  fpm_checks.m4  fpm_conf.m4  fpm_libevent.m4
cgi/: Makefile.am  Makefile.in  cgi_main.c  fastcgi.c  getopt.c  php_getopt.h
conf/: nginx-site-conf.sample.in  php-fpm.conf.in
fpm/: Makefile.am  Makefile.in  fpm_atomic.h  fpm_children.c  fpm_conf.c  fpm_env.c  fpm_php.c  fpm_php_trace.c  fpm_process_ctl.c  fpm_shm.c  fpm_sockets.c  fpm_sockets.h  fpm_str.h  fpm_trace_pread.c  fpm_unix.c  xml_config.c  xml_config.h
init.d/: php-fpm.in
libevent/: Makefile.in  aclocal.m4  configure  evdns.c  event-fpm.h  event.c  event.h  evutil.c  http.c  strlcpy.c
m4/: Makefile.frag  ac_lib_event.m4  ac_php_frag.m4
man/: php-fpm.1.in
src/: Makefile.am  Makefile.in  fpm_autoconfig.h.in
src/fpm/: Makefile.am  Makefile.in  fpm_config.h  fpm_php.c
src/sapi/: Makefile.am  Makefile.in  cgi_main.c  config9.m4  fastcgi.c  fastcgi.h
